; ModuleID = '/home/carl/AnghaBench/zfs/lib/libzutil/extr_zutil_import.c_zpool_find_config.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libzutil/extr_zutil_import.c_zpool_find_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"/@\00", align 1
@ENOENT = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zpool_find_config(i8* %0, i8* %1, i32** %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32**, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i8, align 1
  %18 = alloca i32, align 4
  %19 = alloca i8*, align 8
  %20 = alloca i32*, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32** %2, i32*** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* null, i32** %13, align 8
  store i32* null, i32** %14, align 8
  store i8* null, i8** %15, align 8
  store i8* null, i8** %16, align 8
  store i8 0, i8* %17, align 1
  store i32 0, i32* %18, align 4
  %21 = load i8*, i8** %8, align 8
  %22 = call i8* @strdup(i8* %21)
  store i8* %22, i8** %19, align 8
  %23 = load i32**, i32*** %9, align 8
  store i32* null, i32** %23, align 8
  %24 = load i8*, i8** %19, align 8
  %25 = call i8* @strpbrk(i8* %24, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i8* %25, i8** %16, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %31

27:                                               ; preds = %5
  %28 = load i8*, i8** %16, align 8
  %29 = load i8, i8* %28, align 1
  store i8 %29, i8* %17, align 1
  %30 = load i8*, i8** %16, align 8
  store i8 0, i8* %30, align 1
  br label %31

31:                                               ; preds = %27, %5
  %32 = load i8*, i8** %7, align 8
  %33 = load i32*, i32** %10, align 8
  %34 = load i32*, i32** %11, align 8
  %35 = call i32* @zpool_search_import(i8* %32, i32* %33, i32* %34)
  store i32* %35, i32** %12, align 8
  %36 = load i32*, i32** %12, align 8
  %37 = icmp ne i32* %36, null
  br i1 %37, label %38, label %65

38:                                               ; preds = %31
  store i32* null, i32** %20, align 8
  br label %39

39:                                               ; preds = %63, %57, %38
  %40 = load i32*, i32** %12, align 8
  %41 = load i32*, i32** %20, align 8
  %42 = call i32* @nvlist_next_nvpair(i32* %40, i32* %41)
  store i32* %42, i32** %20, align 8
  %43 = icmp ne i32* %42, null
  br i1 %43, label %44, label %64

44:                                               ; preds = %39
  %45 = load i32*, i32** %20, align 8
  %46 = call i32 @nvpair_value_nvlist(i32* %45, i32** %14)
  %47 = call i32 @VERIFY0(i32 %46)
  %48 = load i32*, i32** %14, align 8
  %49 = load i8*, i8** %19, align 8
  %50 = call i64 @pool_match(i32* %48, i8* %49)
  %51 = icmp ne i64 %50, 0
  br i1 %51, label %52, label %63

52:                                               ; preds = %44
  %53 = load i32, i32* %18, align 4
  %54 = add nsw i32 %53, 1
  store i32 %54, i32* %18, align 4
  %55 = load i32*, i32** %13, align 8
  %56 = icmp ne i32* %55, null
  br i1 %56, label %57, label %58

57:                                               ; preds = %52
  br label %39

58:                                               ; preds = %52
  %59 = load i32*, i32** %14, align 8
  store i32* %59, i32** %13, align 8
  %60 = load i32*, i32** %20, align 8
  %61 = call i8* @nvpair_name(i32* %60)
  store i8* %61, i8** %15, align 8
  br label %62

62:                                               ; preds = %58
  br label %63

63:                                               ; preds = %62, %44
  br label %39

64:                                               ; preds = %39
  br label %65

65:                                               ; preds = %64, %31
  %66 = load i32, i32* %18, align 4
  %67 = icmp eq i32 %66, 0
  br i1 %67, label %68, label %72

68:                                               ; preds = %65
  %69 = load i8*, i8** %19, align 8
  %70 = call i32 @free(i8* %69)
  %71 = load i32, i32* @ENOENT, align 4
  store i32 %71, i32* %6, align 4
  br label %84

72:                                               ; preds = %65
  %73 = load i32, i32* %18, align 4
  %74 = icmp sgt i32 %73, 1
  br i1 %74, label %75, label %79

75:                                               ; preds = %72
  %76 = load i8*, i8** %19, align 8
  %77 = call i32 @free(i8* %76)
  %78 = load i32, i32* @EINVAL, align 4
  store i32 %78, i32* %6, align 4
  br label %84

79:                                               ; preds = %72
  %80 = load i32*, i32** %13, align 8
  %81 = load i32**, i32*** %9, align 8
  store i32* %80, i32** %81, align 8
  %82 = load i8*, i8** %19, align 8
  %83 = call i32 @free(i8* %82)
  store i32 0, i32* %6, align 4
  br label %84

84:                                               ; preds = %79, %75, %68
  %85 = load i32, i32* %6, align 4
  ret i32 %85
}

declare dso_local i8* @strdup(i8*) #1

declare dso_local i8* @strpbrk(i8*, i8*) #1

declare dso_local i32* @zpool_search_import(i8*, i32*, i32*) #1

declare dso_local i32* @nvlist_next_nvpair(i32*, i32*) #1

declare dso_local i32 @VERIFY0(i32) #1

declare dso_local i32 @nvpair_value_nvlist(i32*, i32**) #1

declare dso_local i64 @pool_match(i32*, i8*) #1

declare dso_local i8* @nvpair_name(i32*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
